squash this: notebookWasRemoved buggy

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,14 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-html {
-  height: 100%;
-}
-
 .dev-mode {
   background-color: rgb(26, 26, 26);
   display: flex;
-  align-items: center;
   justify-content: center;
-  height: 100%;
+  height: 100vh;
 }
